[gd_scene load_steps=3 format=3 uid="uid://bkdu767lr5ip1"]

[ext_resource type="Script" path="res://scenes/gate_tester/gate_tester.gd" id="1_0tvmm"]
[ext_resource type="PackedScene" uid="uid://b73alytko4pev" path="res://scenes/sockets/socket_2i_1o.tscn" id="2_4upxj"]

[node name="GateTester" type="Node2D"]
script = ExtResource("1_0tvmm")
metadata/_edit_horizontal_guides_ = [-15.0, 15.0, 0.0]

[node name="Socket2I1O" parent="." instance=ExtResource("2_4upxj")]

[node name="TestingUI" type="Node2D" parent="."]
position = Vector2(269, 0)

[node name="Panel" type="Panel" parent="TestingUI"]
custom_minimum_size = Vector2(360, 120)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -60.0
offset_right = 180.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TestingUI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ColorRect" type="ColorRect" parent="TestingUI/Panel/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="TestingUI/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 4

[node name="CornerHeader" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="GateTypeLabel" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/CornerHeader"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="RowHeader1" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/RowHeader1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RowHeader2" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/RowHeader2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RowHeader3" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/RowHeader3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "input 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColumnHeader1" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/ColumnHeader1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Output00" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Output00Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/Output00"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Output01" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Output01Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/Output01"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/Spacer2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColumnHeader2" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/ColumnHeader2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Output10" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Output10Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/Output10"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Output11" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Output11Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/Output11"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/Spacer3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColumnHeader3" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/ColumnHeader3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "input 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer4" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/Spacer4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer5" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/Spacer5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomCorner" type="ColorRect" parent="TestingUI/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TestingUI/Panel/MarginContainer/GridContainer/BottomCorner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
text = "output 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="gate_inserted" from="Socket2I1O" to="." method="_on_socket_2i_1o_gate_inserted"]
